# sage

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: pretrain_fred_xl.yaml
notebooks/: text_corruption_demo.ipynb
sage/: __init__.py
sage/evaluation/ruerrant_wrapper/: scorer.py
sage/pipeline/: augmenters.py  config.py  pipeline.py
sage/spelling_correction/: corrector.py
sage/spelling_correction/corruptors/: __init__.py  identity.py  randomchar.py
sage/spelling_correction/models/: __init__.py
sage/spelling_correction/models/t5/: encoder_task.py  multiclass.py  multilabel.py  multilabel_lm.py
sage/spelling_correction/training/: data_processor.py  data_utils.py  trainer.py
sage/spelling_corruption/: configuration_corruptor.py  corruptor.py
sage/spelling_corruption/sbsc/: base_classes.py  labeler.py  model.py  sbsc.py  stats_cache.py  typings_positions_conditions.py
sage/utils/: data_load_utils.py  utils.py
tests/: test_correctors.py  test_corruptors.py  test_pipeline.py  tests.py  tests_english.py
