[project]
name = "sage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "augmentex>=1.3.1",
    "datasets>=4.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "protobuf>=6.32.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "sentencepiece>=0.2.1",
    "timeout-decorator>=0.5.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
]
