[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage"
version = "1.1.0"
description = "SAGE: Spell checking via Augmentation and Generative distribution Emulation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nikita Martynov", email = "nikita.martynov.98@list.ru"},
    {name = "Mark Baushenko"},
    {name = "Alena Fenogenova"},
    {name = "Alexandr Abramov"},
]
keywords = ["sage", "spelling", "correction", "nlp", "deep learning", "transformers", "pytorch"]
classifiers = [
    "Natural Language :: English",
    "Natural Language :: Russian", 
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Text Processing",
]

dependencies = [
    "numpy",
    "pandas", 
    "tqdm",
    "pyyaml",
    "packaging",
    "requests",
    "sentencepiece",
    "datasets>=3.6.0",
    "protobuf",
    "timeout_decorator",
    "matplotlib>=3.2",
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "augmentex>=1.0.3"
]

[project.optional-dependencies]
errant = [
    "ru-core-news-lg @ https://huggingface.co/spacy/ru_core_news_lg/resolve/main/ru_core_news_lg-any-py3-none-any.whl",
    "errant @ git+https://github.com/Askinkaty/errant/@4183e57",
    "Levenshtein",
]

[project.urls]
Homepage = "https://github.com/orgs/ai-forever/sage"
Repository = "https://github.com/orgs/ai-forever/sage"

[tool.setuptools.packages.find]
where = ["."]
include = ["sage*"]