[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage"
version = "1.1.0"
description = "SAGE: Spell checking via Augmentation and Generative distribution Emulation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nikita Martynov", email = "nikita.martynov.98@list.ru"},
    {name = "Mark Baushenko"},
    {name = "Alena Fenogenova"},
    {name = "Alexandr Abramov"},
]
keywords = ["sage", "spelling", "correction", "nlp", "deep learning", "transformers", "pytorch"]
classifiers = [
    "Natural Language :: English",
    "Natural Language :: Russian", 
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Text Processing",
]

# Base install covers sage.spelling_corruption (SBSC + Augmentex corruptors).
dependencies = [
    "numpy",
    "pandas",
    "tqdm",
    "datasets>=3.6.0",
    "augmentex>=1.0.3",
]

[project.optional-dependencies]
# sage.spelling_correction: neural spellcheckers (T5, M2M100)
correctors = [
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "sentencepiece",
    "protobuf",
    "pyyaml",
]
# sage.evaluation: ruspelleval metric
evaluation = [
    "timeout_decorator",
]
# sage.utils.draw_and_save_errors_distributions_comparison_charts
charts = [
    "matplotlib>=3.2",
]
# sage.evaluation: errant metric for Russian
errant = [
    "sage[evaluation]",
    "ru-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_lg-3.8.0/ru_core_news_lg-3.8.0-py3-none-any.whl",
    "errant @ git+https://github.com/Askinkaty/errant/@4183e57",
    "Levenshtein",
]
all = [
    "sage[correctors,evaluation,charts,errant]",
]

[project.urls]
Homepage = "https://github.com/orgs/ai-forever/sage"
Repository = "https://github.com/orgs/ai-forever/sage"

[tool.setuptools.packages.find]
where = ["."]
include = ["sage*"]
